microservices/deployment/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
  name: app-ingress
spec:
  rules:
  - host: api.estudo.kubernetes # Mude para o seu endereço
    http:
      paths:
      - backend:
          serviceName: products
          servicePort: 8080
        path: /products
      - backend:
          serviceName: order
          servicePort: 8080
        path: /orders
      - backend:
          serviceName: customer
          servicePort: 8080
        path: /customers
      - backend:
          serviceName: appsvc1
          servicePort: 80
        path: /app1
      - backend:
          serviceName: appsvc2
          servicePort: 80
        path: /app2
